--- a/src/components/MainPage/StepsBlock/Step/Step.module.css
+++ b/src/components/MainPage/StepsBlock/Step/Step.module.css
@@ -35,4 +35,46 @@
     line-height: 22px;
     color: #000000;
     margin: 0;
+    align-self: flex-start;
+}
+
+
+@media all and (max-width: 768px) {
+    .step {
+        column-gap: 15px;
+        padding: 15px 20px;
+        grid-template-columns: 100px 1fr;
+        align-items: center;
+        max-width: 600px;
+        min-height: 160px;
+    }
+
+    .stepImage {
+        height: 100px;
+        width: 100px;
+    }
+}
+
+@media all and (max-width: 500px) {
+    .step {
+        max-width: 400px;
+        grid-template-rows: 20px 1fr;
+        grid-template-columns: 70px 1fr;
+        min-height: 120px;
+    }
+
+    .stepImage {
+        height: 70px;
+        width: 70px;
+    }
+
+    .title {
+        font-size: 15px;
+        line-height: 20px;
+    }
+
+    .text {
+        font-size: 11px;
+        line-height: 13px;
+    }
 }
