Главная сверстана в соответствии с макетом

--- a/src/components/MainPage/TargetAudienceBlock/Audience/Audience.module.css
+++ b/src/components/MainPage/TargetAudienceBlock/Audience/Audience.module.css
@@ -15,7 +15,7 @@
 .title {
     font-weight: 600;
     font-size: 20px;
-    color: white;
+    color: #FBCB84;
     text-transform: uppercase;
     text-align: center;
 }
@@ -23,7 +23,7 @@
 .text {
     font-weight: 600;
     font-size: 20px;
-    color: white;
+    color: black;
     text-align: center;
 }
 
