--- a/src/components/MainPage/AboutBlock/AboutBlock.module.css
+++ b/src/components/MainPage/AboutBlock/AboutBlock.module.css
@@ -1,21 +1,34 @@
 .aboutBlock {
+    background-image: url("../../../assets/img/mainPage/bg-line.svg");
+    background-repeat: no-repeat;
+    background-position: bottom;
+    padding-bottom: 300px;
+}
+
+
+.wrapper {
     width: 1200px;
-    margin: 0 auto 100px;
+    margin: 0 auto;
+    padding: 40px 0 80px;
 }
 
 .title {
     font-weight: 800;
     font-size: 30px;
     line-height: 41px;
-    color: #FBCB84;
+    color: #F56464;
     text-transform: uppercase;
     margin-bottom: 35px;
 }
 
 .text {
-    padding: 0 30px;
+    padding: 0;
+    margin: 0 auto;
     font-size: 20px;
     color: black;
+    width: 60%;
+    display: grid;
+    grid-gap: 15px;
 }
 
 
