--- a/src/components/MainPage/StepsBlock/StepsBlock.module.css
+++ b/src/components/MainPage/StepsBlock/StepsBlock.module.css
@@ -1,6 +1,13 @@
+.stepsBlock {
+    background-image: url("../../../assets/img/mainPage/bg-line.svg");
+    background-repeat: no-repeat;
+    background-position: bottom;
+}
+
 .stepsBlockWrapper {
     width: 1200px;
     margin: 0 auto 100px;
+    padding-top: 70px;
 }
 
 .title {
@@ -9,7 +16,7 @@
     line-height: 41px;
     color: #F34B50;
     text-transform: uppercase;
-    margin-bottom: 35px;
+    margin-bottom: 15px;
 }
 
 .steps {
