--- a/src/components/MainPage/TargetAudienceBlock/TargetAudienceBlock.module.css
+++ b/src/components/MainPage/TargetAudienceBlock/TargetAudienceBlock.module.css
@@ -3,6 +3,16 @@
     margin: 0 auto 60px;
 }
 
+.title {
+    font-weight: 800;
+    font-size: 30px;
+    line-height: 41px;
+    color: #FBCB84;
+    text-transform: uppercase;
+    margin-top: -80px;
+    margin-bottom: 80px;
+}
+
 .audience {
     display: flex;
     justify-content: space-between;
