--- a/src/components/Fragment/Fragment.module.css
+++ b/src/components/Fragment/Fragment.module.css
@@ -18,9 +18,13 @@
     box-sizing: border-box;
     width: 100%;
     border: none;
-    font-weight: 700;
     font-size: 30px;
     margin: 60px 0;
+}
+
+.video {
+    display: block;
+    margin: 0 auto;
 }
 
 .fragmentBlock {
