--- a/src/components/CreateFragment/SelectType/SelectType.module.css
+++ b/src/components/CreateFragment/SelectType/SelectType.module.css
@@ -18,6 +18,7 @@
     display: block;
     background: #C4C4C4;
     border-radius: 10px;
+    border-color: transparent;
     padding: 5px 10px;
     box-sizing: border-box;
     width: 220px;
