--- a/src/components/CreateTest/Task/Task.module.css
+++ b/src/components/CreateTest/Task/Task.module.css
@@ -1,14 +1,14 @@
 .testWrapper {
     display: grid;
     grid-template-areas:
-    "task select"
-    "answer answer";
-    grid-template-columns: 70% 30%;
-    grid-template-rows: 30px 1fr;
+    "task select question"
+    "answer answer question";
+    grid-template-columns: 730px 290px 40px;
+    grid-template-rows: 30px auto;
     justify-content: center;
     grid-gap: 30px;
     width: 100%;
-    height: 240px;
+    min-height: 240px;
     background-color: white;
     border-radius: 9px;
     padding: 30px 50px;
@@ -45,7 +45,7 @@
 .task, .dropdown {
     height: 40px;
     border: none;
-    background: rgba(196, 196, 196, 0.6);
+    background: #d9d9d9;
     border-radius: 4px;
 }
 
@@ -63,7 +63,7 @@
 .dropdownList {
     display: none;
     position: absolute;
-    background-color: rgba(196, 196, 196, 0.6);
+    background-color: #d9d9d9;
     width: 100%;
     min-width: 160px;
     z-index: 1;
@@ -96,6 +96,16 @@
 
 .button:hover {
     background-color: #ef6a6a;
+}
+
+.deleteQuestionButton {
+    grid-area: question;
+    width: 40px;
+    height: 40px;
+    border: none;
+    background: url("./../../../assets/img/fragments/cross.svg") center no-repeat;
+    background-size: 25px;
+    padding: 0;
 }
 
 @media all and (max-width: 992px) {
