--- a/src/components/MyFragments/FragmentsList/FragmentCard/FragmentCard.module.css
+++ b/src/components/MyFragments/FragmentsList/FragmentCard/FragmentCard.module.css
@@ -1,5 +1,6 @@
 .fragmentCard {
     display: block;
+    position: relative;
     background-color: white;
     border-radius: 10px;
     padding: 20px 25px;
