--- a/src/components/Fragment/Fragment.module.css
+++ b/src/components/Fragment/Fragment.module.css
@@ -38,13 +38,12 @@ video {
 
 .buttonsBlock {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     width: 100%;
-    margin: 50px auto 0;
+    margin: 50px auto 20px;
 }
 
 .btn {
-    font-family: "Open Sans", sans-serif;
     font-weight: 700;
     font-size: 20px;
     color: white;
