теги на карточках фрагментов

--- a/src/components/CreateFragment/TagsList/TagsList.module.css
+++ b/src/components/CreateFragment/TagsList/TagsList.module.css
@@ -4,7 +4,7 @@
     color: white;
     text-align: center;
     cursor: pointer;
-    background: linear-gradient(213.69deg, #2CDAA9 14.17%, #84F75C 84.58%), #C4C4C4;
+    background: linear-gradient(87.42deg, #F7B380 17.31%, #F36A76 71.5%), #C4C4C4;
     font-family: Montserrat, sans-serif;
     font-style: normal;
     font-weight: normal;
