--- a/src/components/Fragment/Fragment.module.css
+++ b/src/components/Fragment/Fragment.module.css
@@ -56,6 +56,14 @@ video {
     transition-duration: 200ms;
 }
 
+.addToFavorite {
+    margin-left: auto;
+}
+
+.deleteButton {
+    margin-left: auto;
+}
+
 .btn:hover {
     background: #F56464;
 }
