--- a/src/components/Fragment/Fragment.module.css
+++ b/src/components/Fragment/Fragment.module.css
@@ -22,6 +22,24 @@
     margin: 60px 0;
 }
 
+.author {
+    display: block;
+    width: fit-content;
+    margin: 0 10px 5px auto;
+    color: white;
+    font-size: 18px;
+}
+
+a.creatorName {
+    font-weight: 700;
+    color: #FBCB84;
+    text-decoration: none;
+}
+
+a.creatorName:hover {
+    text-decoration: underline;
+}
+
 video {
     display: block;
     margin: 0 auto;
