--- a/src/components/CreateLesson/Modal/Modal.module.css
+++ b/src/components/CreateLesson/Modal/Modal.module.css
@@ -19,7 +19,7 @@
 }
 
 .modalContent {
-    padding: 40px;
+    /*padding: 40px;*/
     border-radius: 12px;
     background-color: white;
     width: 900px;
