ограничен функционал админа, выведены первые три тега на карточку

--- a/src/components/MyFragments/FragmentsList/FragmentCard/FragmentCard.module.css
+++ b/src/components/MyFragments/FragmentsList/FragmentCard/FragmentCard.module.css
@@ -87,3 +87,7 @@ a {
     min-width: 25px;
     min-height: 25px;
 }
+
+.lastTag {
+    background: linear-gradient(265.72deg, #3390ff 13.2%, #8cff24 93.71%), #C4C4C4;
+}
