--- a/src/components/TeacherProfile/TeacherProfile.module.css
+++ b/src/components/TeacherProfile/TeacherProfile.module.css
@@ -1,3 +1,12 @@
 main {
     background-color: white;
+    padding: 120px 0;
+}
+
+main .content {
+    background-color: rgba(248, 180, 128, 0.49);
+    border-radius: 10px;
+    padding: 50px 90px;
+    width: fit-content;
+    margin: 0 auto;
 }
