--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -71,6 +71,10 @@
     width: 210px;
 }
 
+.dropDownActiveLink {
+    color: #F56464 !important;
+}
+
 .dropDownMenu {
     position: absolute;
     top: 69px;
