--- a/src/components/CreateLesson/CreateLesson.module.css
+++ b/src/components/CreateLesson/CreateLesson.module.css
@@ -1,7 +1,6 @@
 .content {
     width: 1200px;
-    margin: 20px auto;
-    padding-bottom: 100px;
+    margin: 70px auto 80px;
 }
 
 .createButton {
@@ -10,7 +9,6 @@
     margin-top: 30px;
     background-color: #EF5B5B;
     border-radius: 10px;
-    font-family: "Open Sans", sans-serif;
     font-style: normal;
     font-weight: bold;
     font-size: 20px;
