--- a/src/components/CreateLesson/Modal/Modal.module.css
+++ b/src/components/CreateLesson/Modal/Modal.module.css
@@ -2,6 +2,7 @@
     width: 100vw;
     height: 100vh;
     background-color: rgba(0, 0, 0, 0.4);
+    backdrop-filter: blur(10px);
     position: fixed;
     top: 0;
     left: 0;
@@ -10,7 +11,7 @@
     justify-content: center;
     opacity: 0;
     pointer-events: none;
-    transition: 0.5s;
+    transition: 0.3s;
 }
 
 .modal.active {
