--- a/src/components/CreateFragment/CreateFragment.module.css
+++ b/src/components/CreateFragment/CreateFragment.module.css
@@ -48,6 +48,10 @@
     flex-flow: row wrap;
     width: fit-content;
     max-width: 60%;
+    /*border: 2px solid white;*/
+    /*border-radius: 10px;*/
+    /*padding: 10px;*/
+    gap: 6px 12px;
 }
 
 .tag {
@@ -61,8 +65,8 @@
     font-weight: normal;
     font-size: 18px;
     line-height: 22px;
-    margin-bottom: 12px;
-    margin-right: 6px;
+    /*margin-bottom: 12px;*/
+    /*margin-right: 6px;*/
     height: fit-content;
 }
 
