--- a/src/common/Pagination/Pagination.module.css
+++ b/src/common/Pagination/Pagination.module.css
@@ -6,6 +6,10 @@
     align-items: center;
 }
 
+.mobilePagination {
+    display: none;
+}
+
 .pages {
     display: flex;
     justify-content: space-between;
@@ -63,4 +67,31 @@
 .page.current:hover {
     cursor: pointer;
     transform: translateY(-5px);
+}
+
+@media all and (max-width: 710px) {
+    .pagination {
+        display: none;
+    }
+    .mobilePagination {
+        display: grid;
+        grid-template-columns: 45px 1fr 45px;
+        column-gap: 4px;
+        font-size: 18px;
+        align-items: center;
+        margin: 20px auto;
+    }
+    .pages {
+        padding: 7px 10px;
+    }
+    .page {
+        width: 30px;
+        height: 30px;
+    }
+    .prevPage, .nextPage {
+        width: 40px;
+        height: 40px;
+        background-position: center;
+        background-size: 35px;
+    }
 }
