--- a/src/components/MyFragments/FragmentsList/FragmentsList.module.css
+++ b/src/components/MyFragments/FragmentsList/FragmentsList.module.css
@@ -8,6 +8,10 @@
     width: fit-content;
 }
 
+.pagination {
+    width: 50%;
+}
+
 .noFragments {
     background-color: white;
     color: #F56464;
@@ -22,4 +26,34 @@
 .sadSmile {
     cursor: default;
     transform: rotate(90deg);
+}
+
+
+@media all and (max-width: 1200px) {
+    .fragmentsList {
+        grid-template-columns: 1fr 1fr;
+        grid-column-gap: 100px;
+        margin: 0 auto 50px;
+    }
+}
+
+@media all and (max-width: 910px) {
+    .fragmentsList {
+        grid-column-gap: 20px;
+        margin: 0 auto 40px;
+    }
+}
+
+@media all and (max-width: 710px) {
+    .fragmentsList {
+        grid-template-columns: 1fr;
+        grid-row-gap: 20px;
+    }
+    .pagination {
+        width: fit-content;
+        margin: 0 auto;
+    }
+}
+
+@media all and (max-width: 480px) {
 }
