--- a/src/components/MyFragments/MyFragments.module.css
+++ b/src/components/MyFragments/MyFragments.module.css
@@ -2,3 +2,28 @@
     width: 1200px;
     margin: 100px auto 0;
 }
+
+@media all and (max-width: 1200px) {
+    .content {
+        width: 900px;
+    }
+}
+
+@media all and (max-width: 900px) {
+    .content {
+        width: 700px;
+    }
+}
+
+@media all and (max-width: 720px) {
+    .content {
+        width: 100%;
+        margin: 40px auto 0;
+    }
+}
+
+@media all and (max-width: 480px) {
+    .content {
+
+    }
+}
