Реализация отображения добавления в избранное и удаления на страницах Каталог фрагментов и Мои фрагменты

--- a/src/components/MyFragments/FragmentsList/FragmentCard/FragmentCard.module.css
+++ b/src/components/MyFragments/FragmentsList/FragmentCard/FragmentCard.module.css
@@ -38,18 +38,11 @@
     transition: background-image 0.2s ease-in-out;
 }
 
-.addToFavorite {
+.addToFavorite, .alreadyFavorite:hover {
     background-image: url("../../../../assets/img/fragments/addToFavorite.svg");
 }
 
-.addToFavorite:hover {
-    /*-webkit-box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);*/
-    /*-moz-box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);*/
-    /*box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);*/
-    background-image: url("../../../../assets/img/fragments/full-heart.svg");
-}
-
-.alreadyFavorite {
+.addToFavorite:hover, .alreadyFavorite  {
     background-image: url("../../../../assets/img/fragments/full-heart.svg");
 }
 
