--- a/src/components/Teachers/Teachers.module.css
+++ b/src/components/Teachers/Teachers.module.css
@@ -44,7 +44,8 @@
     display: block;
     border: none;
     background-color: transparent;
-    background-image: url("../../assets/img/fragments/search.png");
+    background-image: url("../../assets/img/fragments/search.svg");
+    background-size: 35px;
     background-repeat: no-repeat;
     background-position: center center;
     height: 50px;
