--- a/src/components/Fragment/Fragment.module.css
+++ b/src/components/Fragment/Fragment.module.css
@@ -23,7 +23,8 @@
 }
 
 .author {
-    display: block;
+    display: flex;
+    align-items: center;
     width: fit-content;
     margin: 0 10px 5px auto;
     color: white;
