Логика создания урока

--- a/src/components/CreateLesson/CreateLesson.module.css
+++ b/src/components/CreateLesson/CreateLesson.module.css
@@ -3,10 +3,14 @@
     margin: 70px auto 80px;
 }
 
+.buttonsBlock {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 30px;
+}
+
 .createButton {
     display: block;
-    margin-left: auto;
-    margin-top: 30px;
     background-color: #EF5B5B;
     border-radius: 10px;
     font-style: normal;
