--- a/src/components/CreateLesson/CreateLesson.module.css
+++ b/src/components/CreateLesson/CreateLesson.module.css
@@ -6,7 +6,7 @@
 .buttonsBlock {
     display: flex;
     justify-content: space-between;
-    margin-top: 30px;
+    margin: 30px 0 10px;
 }
 
 .createButton {
