--- a/src/components/TeacherProfile/TeacherProfile.module.css
+++ b/src/components/TeacherProfile/TeacherProfile.module.css
@@ -4,7 +4,7 @@ main {
 }
 
 main .content {
-    background-color: rgba(248, 180, 128, 0.49);
+    background-color: #c9e9f7;
     border-radius: 10px;
     padding: 50px 90px;
     width: fit-content;
