--- a/src/components/MyFragments/FragmentsList/FragmentCard/FragmentCard.module.css
+++ b/src/components/MyFragments/FragmentsList/FragmentCard/FragmentCard.module.css
@@ -35,14 +35,21 @@
     background-color: white;
     border-radius: 50%;
     border: none;
-    transition: background-image 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
 }
 
-.addToFavorite, .alreadyFavorite:hover {
+.addToFavorite {
     background-image: url("../../../../assets/img/fragments/addToFavorite.svg");
 }
 
-.addToFavorite:hover, .alreadyFavorite {
+.addToFavorite:hover {
+    box-shadow: 0 0 13px 0 rgba(250, 234, 237, 0.84);
+}
+.alreadyFavorite:hover {
+    box-shadow: 0 0 23px 0 rgba(250, 234, 237, 0.84);
+}
+
+.alreadyFavorite {
     background-image: url("../../../../assets/img/fragments/full-heart.svg");
 }
 
