Ограничение функционала админа и разделение ролей

--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,7 @@ h1.pageTitle {
     border: none;
     transition: background-color;
     transition-duration: 200ms;
+    min-height: 70px;
 }
 
 .btn:hover {
@@ -40,4 +41,10 @@ h1.pageTitle {
 .btn:disabled {
     background-color: #7C7676;
     opacity: 1;
+}
+.btn:focus {
+    outline: none;
+    border: none;
+    box-shadow: none;
+    background-color: #FBCB84;
 }
