--- a/src/components/Lesson/Lesson.module.css
+++ b/src/components/Lesson/Lesson.module.css
@@ -14,6 +14,7 @@
 .buttonsBlock {
     display: flex;
     justify-content: space-between;
+    align-items: flex-start;
     margin-top: 20px;
 }
 
