--- a/src/components/Lesson/Navigation/Navigation.module.css
+++ b/src/components/Lesson/Navigation/Navigation.module.css
@@ -3,6 +3,17 @@
     border-right: 2px solid rgba(243, 106, 118, 0.7);
 }
 
+.description {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-top-left-radius: 10px;
+    color: black;
+    padding: 25px;
+    font-weight: bold;
+    font-size: 22px;
+}
+
 .fragmentLink {
     display: grid;
     grid-template-areas: 'img title'
@@ -15,20 +26,16 @@
     color: #000000;
 }
 
-.fragmentLink:hover {
+.fragmentLink:hover, .description:hover {
     background: rgba(243, 106, 118, 0.7);
     color: black;
-}
-
-.fragmentLink:first-child {
-    border-top-left-radius: 10px;
 }
 
 .fragmentLink:last-child {
     border-bottom-left-radius: 10px;
 }
 
-.fragmentLink.activeFragment {
+.active {
     background: rgba(243, 106, 118, 0.7);
 }
 
