--- a/src/components/Fragment/Fragment.module.css
+++ b/src/components/Fragment/Fragment.module.css
@@ -1,6 +1,6 @@
 .fragmentWrapper {
     width: 900px;
-    margin: 0 auto 100px;
+    margin: 70px auto 100px;
 }
 
 .name {
@@ -52,7 +52,8 @@ a.creatorName:hover {
 .video {
     display: block;
     margin: 0 auto;
-    max-width: 90%;
+    width: 100%;
+    max-height: 80vh;
 }
 
 .fragmentBlock {
