--- a/src/components/TeacherProfile/TeacherInfo/TeacherInfo.module.css
+++ b/src/components/TeacherProfile/TeacherInfo/TeacherInfo.module.css
@@ -18,4 +18,7 @@
     height: 130px;
     border-radius: 50%;
     margin: auto;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
 }
