--- a/src/components/Teachers/Teachers.module.css
+++ b/src/components/Teachers/Teachers.module.css
@@ -83,9 +83,13 @@
 }
 
 .avatar {
-    max-width: 100px;
+    width: 100px;
+    height: 100px;
     display: block;
     margin: 0 auto;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
     border-radius: 50%;
 }
 
