--- a/src/components/MainPage/AboutBlock/AboutBlock.module.css
+++ b/src/components/MainPage/AboutBlock/AboutBlock.module.css
@@ -31,6 +31,11 @@
     grid-gap: 15px;
 }
 
+@media all and (max-width: 1200px) {
+    .wrapper {
+        width: auto;
+    }
+}
 
 @media all and (max-width: 1024px) {
     .aboutBlock {
