--- a/src/components/MainPage/QuestionsBlock/Question/Question.module.css
+++ b/src/components/MainPage/QuestionsBlock/Question/Question.module.css
@@ -27,17 +27,22 @@
 @media all and (max-width: 500px) {
     .image {
         width: 40px;
+        margin-right: 10px;
         height: 20px;
     }
 
     .question {
-        font-size: 12px;
+        font-size: 15px;
         line-height: 16px;
     }
 
     .answer {
-        font-size: 11px;
+        font-size: 12px;
         line-height: 15px;
-        padding-left: 70px;
+        padding-left: 40px;
+    }
+
+    .questionWrapper {
+        display: flex;
     }
 }
