--- a/src/components/MainPage/StepsBlock/Step/Step.module.css
+++ b/src/components/MainPage/StepsBlock/Step/Step.module.css
@@ -78,3 +78,15 @@
         line-height: 13px;
     }
 }
+
+@media all and (max-width: 400px) {
+    .step {
+        max-width: 350px;
+    }
+}
+
+@media all and (max-width: 330px) {
+    .step {
+        max-width: 300px;
+    }
+}
