--- a/src/components/MyFragments/FragmentsList/FragmentsList.module.css
+++ b/src/components/MyFragments/FragmentsList/FragmentsList.module.css
@@ -4,7 +4,7 @@
     grid-template-columns: 1fr 1fr 1fr;
     grid-column-gap: 20px;
     grid-row-gap: 50px;
-    margin: 0 auto 65px;
+    margin: 0 auto;
     width: fit-content;
 }
 
