--- a/src/components/TeacherProfile/TeacherProfile.module.css
+++ b/src/components/TeacherProfile/TeacherProfile.module.css
@@ -7,7 +7,6 @@ main .content {
     background-color: #c9e9f7;
     border-radius: 10px;
     padding: 50px 90px;
-    width: fit-content;
-    min-width: 1200px;
+    width: 1200px;
     margin: 0 auto;
 }
