--- a/src/common/Input/Input.module.css
+++ b/src/common/Input/Input.module.css
@@ -1,4 +1,5 @@
 .input {
+    margin-right: 35px;
     background-color: #C4C4C4;
     border-radius: 10px;
     padding: 8px 15px;
@@ -16,4 +17,24 @@
 
 .input:focus {
     outline: 2px solid #F18A93;
+}
+
+@media all and (max-width: 992px) {
+    .input {
+        min-width: 280px;
+        margin: 5px;
+        font-size: 18px;
+    }
+
+    .input::placeholder {
+        color: rgba(255, 255, 255, 0.45);
+        font-size: 18px;
+    }
+
+}
+
+@media all and (max-width: 720px) {
+    .input {
+        width: 100%;
+    }
 }
