--- a/src/components/CatalogPage/lessonsCatalog/LessonsCatalog.module.css
+++ b/src/components/CatalogPage/lessonsCatalog/LessonsCatalog.module.css
@@ -2,3 +2,22 @@
     width: 1200px;
     margin: 70px auto 80px;
 }
+
+@media all and (max-width: 1220px) {
+    .content {
+        width: 900px;
+    }
+}
+
+@media all and (max-width: 920px) {
+    .content {
+        width: 700px;
+    }
+}
+
+@media all and (max-width: 720px) {
+    .content {
+        width: 95%;
+        margin: 40px auto 0;
+    }
+}
