--- a/src/components/MyFragments/SearchBlock/SearchBlock.module.css
+++ b/src/components/MyFragments/SearchBlock/SearchBlock.module.css
@@ -32,7 +32,7 @@
     line-height: 33px;
     padding: 8px 15px;
     box-sizing: border-box;
-    min-width: 350px;
+    width: 322px;
     margin-right: 35px;
     color: white;
 }
@@ -56,7 +56,8 @@
     padding: 8px 23px;
     box-sizing: border-box;
     color: white;
-    min-width: 250px;
+    width: 322px;
+    margin-right: 35px;
 }
 
 .searchButton {
@@ -64,6 +65,7 @@
     width: 42px;
     height: 42px;
     padding: 0;
+    color: transparent;
     background-size: 35px;
     background-color: transparent;
     background-position: center;
@@ -98,46 +100,60 @@
         margin-left: 20px;
     }
 
-    .searchInput {
-        height: 45px;
-        min-width: 280px;
-        font-size: 18px;
-    }
-
-    .searchInput::placeholder {
+    .searchInput, .searchInput::placeholder {
         font-size: 18px;
     }
 
     .typeSelect {
-        height: 45px;
+        height: 49px;
         font-size: 18px;
+    }
+}
+@media all and (max-width: 960px) {
+    .searchButton {
+        font-weight: bold;
+        width: 130px;
+        height: 49px;
+        margin: 5px;
+        background-image: none;
+        background-color: #FBE184;
+        border-radius: 10px;
+        color: rgba(90, 89, 89, 0.52);
+    }
+    .typeSelect, .searchInput {
+        margin: 5px;
+    }
+
+    .inputBlock {
+        flex-wrap: wrap;
     }
 }
 
 @media all and (max-width: 720px) {
+    .searchButton {
+        margin: 5px 0 5px 5px;
+    }
     .searchInput {
         width: 100%;
         margin: 0 0 10px 0;
     }
 
     .typeSelect {
-        min-width: 245px;
-        width: 60%;
-        font-size: 18px;
+        width: 300px;
         padding: 8px 10px;
+        margin: 5px 5px 5px 0;
     }
-
     .inputBlock {
-        flex-wrap: wrap;
-    }
-
-    .searchButton {
-        margin-left: 15px;
+        justify-content: space-between;
     }
 }
 
 @media all and (max-width: 480px) {
     .searchButton {
-        margin-left: 10px;
+        margin: 5px 5px 5px 0;
+    }
+    .typeSelect {
+        width: 100%;
+        margin: 5px 0 5px 0;
     }
 }
